Bug 1176406 - IonMonkey: Poor type refinement of element access results during inlininig Improve type refinement based on the heap type sets of input objects to GETELEM operations. r=bhackett1024